--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"tailwindcss": "^1.6.2"
 	},
 	"scripts": {
-		"start": "npm run watch:css && set PORT=1337 && react-scripts start",
+		"start": "chmod +x ./env.sh && ./env.sh && cp env-config.js ./public/ && npm run watch:css && react-scripts --openssl-legacy-provider start",
 		"build": "npm run build:css && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
