--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 BOOKMARKS_BACKEND_BASE_URL=http://localhost:8000
+BOOKMARKS_GITHUB_LINK=http://localhost:8001
+BOOKMARKS_STATUS_LINK=http://localhost:8002
+BOOKMARKS_API_DOCS_LINK=http://localhost:8003
+BOOKMARKS_UMAMI_TRACKING_LINK=http://localhost:8004
+BOOKMARKS_UMAMI_TRACKING_CODE=http://localhost:8005
